fixed error and fixed some alignment

--- a/static/css/themes/fire/fire.css
+++ b/static/css/themes/fire/fire.css
@@ -185,6 +185,8 @@ a {
 
 #footer p {
   margin-top: 14px;
+  margin-left:5px;
+  margin-right:5px;
 }
 
 .fa {
